--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -18,4 +18,4 @@ Released 29 April 2006.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
 * improved [[todo/html]] stylesheets and templates
 * A version of the logo in a different font, possibly with the dots on the i's highlighted in some other color.
-* Support for at least one RCS aside from svn. Once it supports two, it should quickly grow to support them all..
+* Support for at least one RCS aside from svn. Once it supports two, it should quickly grow to support them all.. See [[about_rcs_backends]]
