web commit by tuomov: Fixed a typo

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -1,4 +1,4 @@
-So you want to set up your own wiki using ikiwiki? This turorial will walk
+So you want to set up your own wiki using ikiwiki? This tutorial will walk
 you through setting up a wiki that is stored in [[Subversion]] and that has
 optional support for commits from the web.
 
