web commit by RecaiOktas: UTF-8 test (first entry)

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -61,6 +61,13 @@ Bulleted list
 
 So did that work? --[[Joey]]
 
+----
+
+Turkish spesific characters (latin5) expected to be here --> ığüşöçİĞÜŞÖÇ
+(character encoding set as UTF-8 on the client side)
+
+----
+
 This sandbox is also a [[blog]]!
 
 [[inline pages="sandbox/*" rootpage="sandbox" show="5"]]
