web commit by RecaiOktas: UTF-8 test (second entry)

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -66,6 +66,8 @@ So did that work? --[[Joey]]
 Turkish spesific characters (latin5) expected to be here --> ığüşöçİĞÜŞÖÇ
 (character encoding set as UTF-8 on the client side)
 
+Hmm...  Rendered properly but now in this second entry, they all seem to be corrupted in the CGI form.  How about `sandbox.mdwn`?  --[[Roktas]]
+
 ----
 
 This sandbox is also a [[blog]]!
