web commit by RecaiOktas: UTF-8 test (conclusion)

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -70,6 +70,8 @@ Hmm...  Rendered properly but now in this second entry, they all seem to be corr
 
 Displayed correctly after the previous (second) test, corrupted in the CGI form  though. --[[Roktas]]
 
+Multibyte characters are rendered and stored correctly (looking at the `sandbox.mdwn` diff), but we have a problem in CGI forms.  --[[Roktas]]
+
 ----
 
 This sandbox is also a [[blog]]!
