--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-ikiwiki (1.2) UNRELEASED; urgency=low
+ikiwiki (1.2) unstable; urgency=low
 
   * Remove dups from the brokenlinks list.
   * Add libc6-dev to dependencies, needed to build wrappers.
+  * Install wikilist in correct location. Closes: #367371
 
- -- Joey Hess <joeyh@debian.org>  Mon,  8 May 2006 19:00:16 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 15 May 2006 10:53:49 -0500
 
 ikiwiki (1.1) unstable; urgency=low
 
