--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.3) unstable; urgency=low
+
+  * Fix the preinst introduced in the last version. Closes: #367458
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 16 May 2006 02:43:02 -0500
+
 ikiwiki (1.2) unstable; urgency=low
 
   * Remove dups from the brokenlinks list.
