web commit by PaulCollins: adding my wiki

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -10,5 +10,6 @@ This page is to track users of ikiwiki.
 * [Bright Cloud](http://brightcloud.lcsee.wvu.edu/), a project of WVU LCSEE
 * [David Moreno Garza's personal wiki](http://anorak.com.ve/~damog/wiki)
 * [UK Software Patents info page](http://www.softwarepatents.co.uk/)
+* Paul Collins's [as-yet purposeless wiki](http://wiki.ondioline.org/).
 
 See also: [ikiwiki popcon graph](http://people.debian.org/~igloo/popcon-graphs/index.php?packages=ikiwiki)
