* The page name and parent links has switched from using a <h1> to a styled   <span>, so pages can use <h1> internally instead of needing to use <h2>. * Updated all of ikiwiki's own wiki pages for that. * Add pagetemplate hook, which can be used by plugins that want to mess   around with adding new stuff to the page template. * Remove headercontent; the search plugin now adds the search box to the   header by registering a pagetemplate hook, and other plugins should do   similarly.

--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -1,4 +1,4 @@
-## Help on formatting text
+# Help on formatting text
 
 Text on this wiki is written in a form very close to how you might write
 text for an email message.
@@ -24,6 +24,7 @@ To create a header, start a line with one or more `#` characters followed
 by a space and the header text. The number of `#` characters controls the
 size of the header:
 
+# # h1
 ## ## h2
 ### ### h3
 #### #### h4
