--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -1,11 +1,11 @@
 Here's how to get ikiwiki. See [[setup]] for how to use it, and be sure to add your wiki to [[IkiwikiUsers]] if you use ikiwiki.
 
-## tarball
+# tarball
 
 The best place to download a tarball of the latest release is from 
 <http://packages.debian.org/unstable/source/ikiwiki>.
 
-## Debian package
+# Debian package
 
 If using Debian unstable, or soon, testing:
 
@@ -15,7 +15,7 @@ Or download the deb from <http://packages.debian.org/unstable/web/ikiwiki>.
 
 While this deb has been developed on Debian unstable, it should also work on stable, although to get the CGI stuff working on stable, you will need to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`.
 
-## subversion
+# subversion
 
 The current development version of ikiwiki can be accessed using subversion at 
 `svn://svn.kitenet.net/ikiwiki/trunk`
