--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -1,16 +1,16 @@
-## A few bits about the RCS backends
+# A few bits about the RCS backends
 
-### Terminology
+## Terminology
 
 ``web-edit'' means that a page is edited by using the web (CGI) interface
 as opposed to using a editor and the RCS interface.
 
 
-### [[Subversion]]
+## [[Subversion]]
 
 Subversion was the first RCS to be supported by ikiwiki.
 
-#### How does it work internally?
+### How does it work internally?
 
 Master repository M.
 
@@ -28,12 +28,12 @@ see [[commit-internals]].
 You browse and web-edit the wiki on W.
 
 
-### [darcs](http://darcs.net/) (not yet included)
+## [darcs](http://darcs.net/) (not yet included)
 
 Support for using darcs as a backend is being worked on by [Thomas
 Schwinge](mailto:tschwinge@gnu.org).
 
-#### How will it work internally?
+### How will it work internally?
 
 ``Master'' repository R1.
 
@@ -59,7 +59,7 @@ separated parts in ikiwiki.
 
 What repository should [[RecentChanges]] and [[History]] work on?  R1?
 
-##### Rationale for doing it differently than in the Subversion case
+#### Rationale for doing it differently than in the Subversion case
 
 darcs is a distributed RCS, which means that every checkout of a
 repository is equal to the repository it was checked-out from.  There is
@@ -76,7 +76,7 @@ off from R1.
 (To be continued.)
 
 
-### [[Git]] (not yet included)
+## [[Git]] (not yet included)
 
 A patch with full [Git](http://git.or.cz) support is at <http://people.debian.org/~roktas/patches/ikiwiki/git.patch>. Regarding the patch, Recai says:
 
