--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -29,6 +29,10 @@ Suggestions of ideas for plugins:
 
 * random page (cgi plugin; how to link to it easily?)
 
+* navigation or side bar plugin, would use a specific page as the side bar
+  and include it into the other pages as specified by the template. The
+  pagetemplate hook was added to allow for this.
+
 All the kinds of plugins that blogging software has is also a possibility:
 
 * Blog post calendar
