--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,14 @@ ikiwiki (1.4) UNRELEASED; urgency=low
   * Remove headercontent; the search plugin now adds the search box to the
     header by registering a pagetemplate hook, and other plugins should do
     similarly.
+  * Rebuilding on upgrade to this version is recommended.
+  * Add a html validity check to the test suite, using the wdg-html-validator,
+    if available.
+  * Make the html valid when there is nothing in the actions list by adding an
+    empty <li> to the end of it.
+  * Reordered some function call parameters for consistency.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 25 May 2006 20:57:07 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 26 May 2006 04:11:57 -0400
 
 ikiwiki (1.3) unstable; urgency=low
 
