--- a/doc/todo/utf8.mdwn
+++ b/doc/todo/utf8.mdwn
@@ -1,4 +1,7 @@
-ikiwiki should support utf-8 pages, both input and output
+ikiwiki should support utf-8 pages, both input and output. To test, here's a
+utf-8 smiley:
+
+# ☺
 
 Currently ikiwiki is belived to be utf-8 clean itself; it tells perl to use
 binmode when reading possibly binary files (such as images) and it uses
