--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -181,12 +181,13 @@ These options configure the wiki.
 
   Be vebose about what is being done.
 
-* --fixctime
+* --getctime
 
-  Pull last changed time for all pages out of the revision control system.
-  This rarely used option provides a way to get the real creation times of
-  items in weblogs, for example when building a wiki from a new subversion
-  checkout. It is unoptimised and quite slow.
+  Pull last changed time for each new page out of the revision control
+  system. This rarely used option provides a way to get the real creation
+  times of items in weblogs, for example when building a wiki from a new
+  subversion checkout. It is unoptimised and quite slow. It is best used
+  with --rebuild, to force ikiwiki to get the ctime for all pages.
 
 # AUTHOR
 
