--- a/debian/changelog
+++ b/debian/changelog
@@ -14,11 +14,17 @@ ikiwiki (1.4) UNRELEASED; urgency=low
   * Rebuilding on upgrade to this version is recommended.
   * Add a html validity check to the test suite, using the wdg-html-validator,
     if available.
-  * Make the html valid when there is nothing in the actions list by adding an
-    empty <li> to the end of it.
+  * Make the html valid when there is nothing in the actions list.
   * Reordered some function call parameters for consistency.
+  * Enable full utf-8 support for page input and output.
+  * Add a workaround for markdown, which does not work well with utf-8
+    strings.
+  * --getctime had bitrotted (well I only ever used it the once so far..), 
+    fix and make it a bit more flexible
+  * rcs_getctime is changed, now rather than needing to loop over all pages,
+    it should just use the rcs to get the ctime of the passed file.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 26 May 2006 04:11:57 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 26 May 2006 04:49:49 -0400
 
 ikiwiki (1.3) unstable; urgency=low
 
