--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -13,8 +13,8 @@ Released 29 April 2006.
 
 * Unit test suite (with tests of at least core stuff like
   [[GlobList]]).
-* [[todo/Plugin]] mechanism. 
-* Should have fully working [[todo/utf8]] support.
+* [[Plugins]] 
+* Should have fully working [[todo/done/utf8]] support.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
 * improved [[todo/html]] stylesheets and templates
 * A version of the logo in a different font, possibly with the dots on the i's highlighted in some other color.
