--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -146,7 +146,7 @@ closed though.
 
 # Fixed holes
 
-_(Unless otherwise noted, these were discovered and immediatey fixed by the
+_(Unless otherwise noted, these were discovered and immediately fixed by the
 ikiwiki developers.)_
 
 ## destination directory file replacement
