--- a/debian/changelog
+++ b/debian/changelog
@@ -29,13 +29,14 @@ ikiwiki (1.4) UNRELEASED; urgency=low
     inlining page, they are expanded from the POV of the inlined page.
 
     For example, a link from blog/foo to "bar" will now link to blog/bar
-    if it exists. Previously this needed to be a link explicitly to 
+    if it exists. Previously this needed to be a link explicitly to
     "blog/bar"; such links will also continue to work.
 
     (This was slightly complex to do as the link still has to be constructed
     relative to the inlining page.)
+  * Make page edit textarea resize to fit browser window.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 26 May 2006 11:43:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 May 2006 14:28:19 -0400
 
 ikiwiki (1.3) unstable; urgency=low
 
