* Add -refresh option to ikiwiki-mass-rebuild and use that on upgrades that   do not need a full rebuild, in order to update any basewiki pages.

--- a/doc/ikiwiki-mass-rebuild.mdwn
+++ b/doc/ikiwiki-mass-rebuild.mdwn
@@ -14,6 +14,13 @@ on a system. You will need to list the wikis it shuld build in the file
 
 user /path/to/wiki
 
+# OPTIONS
+
+* -refresh
+
+  Rather than rebuilding all the wikis, just build any changed pages
+  (including pages inherited from the basewiki).
+
 # AUTHOR
 
 Joey Hess <joey@kitenet.net>
