--- a/debian/changelog
+++ b/debian/changelog
@@ -35,8 +35,10 @@ ikiwiki (1.4) UNRELEASED; urgency=low
     (This was slightly complex to do as the link still has to be constructed
     relative to the inlining page.)
   * Make page edit textarea resize to fit browser window.
+  * Add -refresh option to ikiwiki-mass-rebuild and use that on upgrades that
+    do not need a full rebuild, in order to update any basewiki pages.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 May 2006 14:28:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 May 2006 15:01:52 -0400
 
 ikiwiki (1.3) unstable; urgency=low
 
