--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.4) UNRELEASED; urgency=low
+ikiwiki (1.4) unstable; urgency=low
 
   * Tell HTML::Scrubber to treat "/" as a valid attribute which is its
     very strange way of enabling proper XHTML <br /> type tags. Output html
@@ -38,7 +38,7 @@ ikiwiki (1.4) UNRELEASED; urgency=low
   * Add -refresh option to ikiwiki-mass-rebuild and use that on upgrades that
     do not need a full rebuild, in order to update any basewiki pages.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 27 May 2006 15:01:52 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 May 2006 15:08:49 -0400
 
 ikiwiki (1.3) unstable; urgency=low
 
