web commit by joey

--- a/doc/news/version_1.4.mdwn
+++ b/doc/news/version_1.4.mdwn
@@ -1,10 +1,10 @@
 ikiwiki 1.4 released with these changes:
 
    * Tell HTML::Scrubber to treat "/" as a valid attribute which is its
-     very strange way of enabling proper XHTML <br /> type tags. Output html
+     very strange way of enabling proper XHTML br type tags. Output html
      should be always valid again now.
-   * The page name and parent links has switched from using a <h1> to a styled
-     <span>, so pages can use <h1> internally instead of needing to use <h2>.
+   * The page name and parent links has switched from using a h1 to a styled
+     span, so pages can use h1 internally instead of needing to use h2.
    * Updated all of ikiwiki's own wiki pages for that.
    * Add pagetemplate hook, which can be used by plugins that want to mess
      around with adding new stuff to the page template.
