--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ikiwiki (1.5) UNRELEASED; urgency=low
+
+  * Add --timeformat config option to allow changing how dates are displayed.
+    Note that as a side effect, dates will now be displayed using the local
+    timezone, not as GMT.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 29 May 2006 00:50:34 -0400
+
 ikiwiki (1.4) unstable; urgency=low
 
   * Tell HTML::Scrubber to treat "/" as a valid attribute which is its
