web commit by VictorMoral

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -74,6 +74,10 @@ Multibyte characters are rendered and stored correctly (looking at the `sandbox.
 
 ----
 
+Esto está en español :-)
+
+-----
+
 This sandbox is also a [[blog]]!
 
 [[inline pages="sandbox/*" rootpage="sandbox" show="5"]]
