web commit by joey

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -1,4 +1,6 @@
-This [[SubPage]] is a discussion page for ikiwiki. Feel free to discuss anything about the program here.
+Seems like there should be a page for you to post your thoughts about ikiwiki, both pro and con, anything that didn't work, ideas, or whatever.
+
+Note that for more formal bug reports or todo items, you can also edit the [[bugs]] and  [[todo]] pages.
 
 ----
 
