--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ ikiwiki (1.5) UNRELEASED; urgency=low
   * Add --timeformat config option to allow changing how dates are displayed.
     Note that as a side effect, dates will now be displayed using the local
     timezone, not as GMT.
+  * More security review.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 29 May 2006 00:50:34 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  1 Jun 2006 15:12:29 -0400
 
 ikiwiki (1.4) unstable; urgency=low
 
