* Patch from Dr. Zini to add link() and backlink() to globlists. This allows   for some handy stuff like:   - Using links as a kind of tag; creating blog pages that list all pages     containing a given tag/link or not containing some other tag.   - Subscribing to mail notifications whenever a change is made to a page     that is a backlink of page foo. Ie, "Please notify me of changes in all     pages that link to my home page in the wiki"   - Locking any pages that are linked to from a particular page, so that     lists of locks can be exposed in the wiki.

--- a/basewiki/globlist.mdwn
+++ b/basewiki/globlist.mdwn
@@ -14,3 +14,7 @@ pages that match it. So if you want to specify all pages except for
 Discussion pages and the SandBox:
 
 	* !SandBox !*/Discussion
+
+It's also possible to match pages that link to a given page, by writing
+"link(page)" in a globlist. Or, match pages that a given page links to, by
+writing "backlink(page)".
