--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -37,12 +37,14 @@ Some of ikiwiki's features:
 
 * [[blog]]s
 
-  You can turn any page in the wiki into a [[blog]]. Pages with names 
-  matching a specified [[GlobList]] will be displayed as a weblog within
-  the blog page. And an RSS feed can be generated to follow the blog.
+  You can turn any page in the wiki into a [[blog]]. Pages matching a
+  specified [[GlobList]] will be displayed as a weblog within the blog
+  page. And an RSS feed can be generated to follow the blog.
 
-  Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples of some of
-  the flexible ways that this can be used.
+  Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples
+  of some of the flexible ways that this can be used.
+
+  Note that this also includes support for tag-based blogging.
 
 * Fast compiler
 
