--- a/basewiki/blog.mdwn
+++ b/basewiki/blog.mdwn
@@ -1,7 +1,7 @@
 You can turn any page on this wiki into a weblog by inserting a
 [[PreProcessorDirective]]. Like this:
 
-\\[[inline pages="blog/* !*/Discussion" show="10" rootpage="blog"]]
+	\\[[inline pages="blog/* !*/Discussion" show="10" rootpage="blog"]]
 
 Any pages that match the specified [[GlobList]] (in the example, any
 [[SubPage]] of "blog") will be part of the blog, and the newest 10
@@ -14,9 +14,20 @@ top of the blog that can be used to add new items.
 If you want your blog to have an archive page listing every post ever made
 to it, you can accomplish that like this:
 
-\\[[inline pages="blog/* !*/Discussion" archive="yes"]]
+	\\[[inline pages="blog/* !*/Discussion" archive="yes"]]
 
 You can even create an automatically generated list of all the pages on the
 wiki, with the most recently added at the top, like this:
 
-\\[[inline pages="* !*/Discussion" archive="yes"]]
+	\\[[inline pages="* !*/Discussion" archive="yes"]]
+
+If you want to be able to add pages to a given blog feed by tagging them,
+you can do that too. To tag a page, just make it link to a page or pages 
+that represent its tags. Then use the special link() [[GlobList]] to match
+all pages that have a given tag:
+
+	\\[[inline pages="link(life)"]]
+
+Or include some tags and exclude others:
+
+	\\[[inline pages="link(debian) !link(social)"]]
