* Reorganised the doc wiki's todo/* pages, using a [[done]] tag to flag   when a todo item is done, instead of the previous moving it to a different   subdir.

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -21,3 +21,6 @@ The current development version of ikiwiki can be accessed using subversion at
 `svn://svn.kitenet.net/ikiwiki/trunk`
 
 The source in subversion can be browsed [with viewcvs](http://svn.kitenet.net/trunk/?root=ikiwiki).
+
+If you would like to be subscribed to svn commit messages for ikiwiki,
+mail joey@kitenet.net.
