--- a/doc/todo/1.0_release_blockers.mdwn
+++ b/doc/todo/1.0_release_blockers.mdwn
@@ -3,3 +3,5 @@ The following need to be resolved before ikiwiki 1.0 can be released:
 * HTML XSS [[security]] issues. Do I need to find or write a html sanitiser and bolt it onto the wiki, or can this stupid issue be ignored? It's really the browser's fault, and sanitising out html that is exploitable in all the buggy browsers out there is a neverending treadmill.
 
 That's all!
+
+[[done]]
