--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,11 @@ ikiwiki (1.5) UNRELEASED; urgency=low
       pages that link to my home page in the wiki"
     - Locking any pages that are linked to from a particular page, so that
       lists of locks can be exposed in the wiki.
+  * Reorganised the doc wiki's todo/* pages, using a [[done]] tag to flag
+    when a todo item is done, instead of the previous moving it to a different
+    subdir.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  1 Jun 2006 20:56:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  1 Jun 2006 21:30:03 -0400
 
 ikiwiki (1.4) unstable; urgency=low
 
