--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,9 +1,9 @@
-Welcome to ikiwiki's todo list. Items are moved to [[todo/done]] when done.
+Welcome to ikiwiki's todo list. Link items to [[todo/done]] when done.
 
-[[inline pages="todo/* !todo/done* !*/Discussion" rootpage="todo" show="30"]]
+[[inline pages="todo/* !todo/done !link(done) !*/Discussion" rootpage="todo" show="30"]]
 
 ----
 
 # Full list of open items:
 
-[[inline pages="todo/* !todo/done* !*/Discussion" archive="yes"]]
+[[inline pages="todo/* !todo/done !link(done) !*/Discussion" archive="yes"]]
