--- a/doc/todo/done.mdwn
+++ b/doc/todo/done.mdwn
@@ -1,3 +1,3 @@
 recently fixed [[TODO]] items
 
-[[inline pages="todo/done/* !*/Discussion" show="10"]]
+[[inline pages="todo/* link(done) !*/Discussion" show="10"]]
