--- a/doc/todo/mailnotification.mdwn
+++ b/doc/todo/mailnotification.mdwn
@@ -55,3 +55,5 @@ should be safe. --[[WillThompson]])
 
   I'm deferring these nicities until there's some demonstrated demand
   --[[Joey]].
+
+[[done]]
