--- a/doc/todo/underlay.mdwn
+++ b/doc/todo/underlay.mdwn
@@ -9,3 +9,5 @@ skip in the srcdir, and tricking it to processing this file instead of the
 one from the underlaydir. -- Fixed by scanning srcdir first, then
 underlaydir, and refusing to add any files from underlaydir if they also
 exist in the srcdir. However, see [[security]] for caveats.
+
+[[done]]
