--- a/doc/todo/upgradehooks.mdwn
+++ b/doc/todo/upgradehooks.mdwn
@@ -4,3 +4,5 @@ this.
 
 Let there be an /etc/ikiwiki/wikis, which just lists setup files and the
 user who owns them. postinst loops through, su's, and runs --setup. Voila!
+
+[[done]]
