--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -35,7 +35,7 @@ Some of ikiwiki's features:
 
   Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRules]]
 
-* [[blog]]s
+* [[blogging|blog]]
 
   You can turn any page in the wiki into a [[blog]]. Pages matching a
   specified [[GlobList]] will be displayed as a weblog within the blog
@@ -44,7 +44,9 @@ Some of ikiwiki's features:
   Ikiwiki's own [[TODO]], [[news]], and [[plugins]] pages are good examples
   of some of the flexible ways that this can be used.
 
-  Note that this also includes support for tag-based blogging.
+* [[tags]]
+
+  You can tag pages and use these tags in various ways.
 
 * Fast compiler
 
