--- a/doc/todo/lists.mdwn
+++ b/doc/todo/lists.mdwn
@@ -1,8 +1,3 @@
 * list of all missing pages
 
-  done
-
-* list of registered users, with the names being links to any userpages.
-
-  Might be a plugin, but how to let the wiki know that the page
-  needs an update whever a new user is added?
+  [[done]]
