--- a/doc/todo/metadata.mdwn
+++ b/doc/todo/metadata.mdwn
@@ -9,3 +9,9 @@ Uses for this include:
 * Any metadata that's generally useful on html pages.
 * Maybe as an alternate way to tag a page, like linking to the tag,
   except it doesn't have to show up in the page text.
+* Recording page licenses.
+
+[[meta link=done]]
+[[meta title="supporting metadata..."]]
+[[meta author="Joey Hess"]]
+[[meta link="foo.css" rel="stylesheet" type="text/css"]]
