--- a/doc/tags.mdwn
+++ b/doc/tags.mdwn
@@ -14,5 +14,6 @@ The [[meta_plugin|plugins/meta]] allows you to do so, like this:
 	\\[[meta link=mytag]]
 
 One way to use these tags is to create a [[blog]] of pages that have a
-particular set of tags. [[Plugins]] can be written to do anything else with
-tags that you might desire.
+particular set of tags. Or just look at the [[BackLinks]] to a tag page to
+see all the pages that are tagged with it. [[Plugins]] can be written to do
+anything else with tags that you might desire.
